<resources>
    <string name="app_name">electrick</string>
    <string name="map">Map</string>
    <string name="evs">EVs</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="google_web_client_id">102405258519-ph2vi2in0da6605bcruatd5bn7e8sv6o.apps.googleusercontent.com</string>
    <string name="google_web_client_id_2">102405258519-ph2vi2in0da6605bcruatd5bn7e8sv6o.apps.googleusercontent.com</string>
    <string name="google_web_client_id_3">102405258519-ph2vi2in0da6605bcruatd5bn7e8sv6o.apps.googleusercontent.com</string>
    <string name="google_web_id">102405258519-48hr84169d350galti5tivvg13ehbnod.apps.googleusercontent.com</string>
    <string name="tesla_model_3">Tesla Model 3</string>
    <string name="battery">Battery: 79%</string>
    <string name="seats">Seats: 5</string>
    <string name="range">Range: 547 km</string>
    <string name="price">Price: 0,59 RON/min</string>
    <string name="reserve">Reserve</string>
    <string name="location">Location:</string>
    <string name="location_text">Location</string>
    <string name="snd_label_duration">The estimated duration of your reservation in minutes</string>
    <string name="label_duration">Duration</string>
    <string name="close">Close</string>
    <string name="reservation_completed">Reservation completed</string>
    <string name="reservation">Title</string>
    <string name="reservation_message">Message</string>
    <string name="static_shortcut_label_short">Profile</string>
    <string name="static_shortcut_label_long">Profile Fragment</string>
    <string name="static_shortcut_disabled_message">Disabled</string>
</resources>